k8s/react-ingress.yml
# aws nlb(network load balancer) -> ingress controller(pod) -> ingress -> service -> pod
# ingress controller install
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  namespace: lgcns
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
  
spec: 
  ingressClassName: nginx 
  rules:
  # 레코드로 등록한 도메인 이름
  - host: react.tumfit.shop
    http:
      paths:
        # http://server.tumfit.shop/
      - path: /
        pathType: Prefix
        backend: 
          service:
            # routing 위해서 apigateway 를 찾고 해당 서비스에서 실제 라우팅이 발생
            # server.tumfit.shop로 들어오는 요청을 apigateway-service로 보내라는 뜻
            # http://server.tumfit.shop/user-service
            # http://server.tumfit.shop/product-service
            # http://server.tumfit.shop/order-service
            name: react-service
            port: 
              number: 80
